# lumen-analytics

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  docker.yml
.streamlit/: config.toml
dbt/: .sqlfluff  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: sources.yml
dbt/models/marts/: dim_account.sql  dim_date.sql  dim_industry.sql  dim_plan.sql  fct_engagement_daily.sql  fct_mrr_monthly.sql  fct_mrr_movements.sql  fct_tickets_monthly.sql  mart_account_health.sql  mart_ml_training.sql  schema.yml
dbt/models/staging/: schema.yml  stg_accounts.sql  stg_events.sql  stg_invoices.sql  stg_subscriptions.sql  stg_tickets.sql
dbt/tests/: assert_churned_accounts_have_no_active_subs.sql  assert_mrr_movements_reconcile.sql  assert_no_future_events.sql  assert_subscription_history_non_overlapping.sql
flows/: Dockerfile  __init__.py  deployments.py  entrypoint.sh  flows.py  requirements.txt
great_expectations/: __init__.py  runner.py  suites.py
ml/: __init__.py  features.py  metrics.py  predict.py  shap_explain.py  tiering.py  train.py
monitoring/: __init__.py  evidently_jobs.py
pipeline/: Dockerfile  requirements.txt
scripts/: bootstrap.sh
sql/: init.sql
